tweeked subscribe button size so it works on mobile too, fixed articles page that was breaking when too wide

--- a/css/w3.css
+++ b/css/w3.css
@@ -1153,6 +1153,9 @@ a {
 .w3-border {
   border: 1px solid #ccc !important;
 }
+.w3-border-black {
+  border: 2px solid #000 !important;
+}
 .w3-border-top {
   border-top: 1px solid #ccc !important;
 }
